karnc/tests/fixtures/positive/158_state_refined_init/src/gauge.karn
context gauge

type Level = Int where Positive

agent Gauge {
  key id: String

  state {
    level: Level = 1,
  }

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
